2006-12-18  Sergey Poznyakoff  <gray@gnu.org.ua>

	* gnulib.modules: Add configmake

2006-12-12  Paul Eggert  <eggert@cs.ucla.edu>

	* rmt/rmt.c (status_device) [!defined MTIOCGET]:
	Fix bracketing typo.  Problem reported by Yutaka Furubayashi.

2006-12-07  Sergey Poznyakoff  <gray@gnu.org.ua>

	* doc/genfile.texi (Generate Mode): Document --seek option.
	* paxlib/error.c (read_fatal_details): Fix wording of the error
	message.
	* tests/genfile.c: Implement new option --seek (similar
	to `dd seek=')

2006-11-29  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/rtapelib.c: Include <rmt-command.h> rather than <localedir.h>,
	to accommodate recent changes to gnulib and tar.
	* rmt/rmt.c: Likewise.
	* rmt/Makefile.am (rmt.o): Depend on configmake.h, not localedir.h.
	* m4/system.m4 (PU_SUSTEM): Put AC_REQUIRE wrappers around
	AC_HEADER_STDC, etc.  This avoids a warning from automake,
	with the latest gnulib.

2006-09-27  Sergey Poznyakoff  <gray@gnu.org.ua>

	* tests/genfile.c (exec_command): Add extra spaces.

2006-09-08  Sergey Poznyakoff  <gray@gnu.org.ua>

	* tests/genfile.c (exec_command): Fix memory reallocation.

2006-08-07  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/system.h: Include <inttypes.h> unconditionally.
	The latest gnulib lets us do this.
	* m4/system.m4 (PU_SYSTEM): Don't check for inttypes.h
	Don't require gl_AC_TYPE_UINTMAX_T.
	Require gl_INTTYPES_H, gl_STDINT_H.

	* tests/genfile.c (reg_action): Return void, not int.
	(generate_simple_file, exec_command): Remove unused var.
	(print_stat): Avoid GCC warning about uninitialized var.

2006-07-09  Sergey Poznyakoff  <gray@gnu.org.ua>

	* THANKS: Add Ralf Wildenhues

2006-07-09  Ralf Wildenhues    <Ralf.Wildenhues@gmx.de>

	* doc/genfile.texi: Fix some typos.

2006-07-03  Sergey Poznyakoff  <gray@gnu.org.ua>

	* tests/genfile.c (get_size): Rewrite to avoid numeric overflow.

2006-06-25  Sergey Poznyakoff  <gray@gnu.org.ua>

	* lib/system.h (ST_IS_SPARSE): New macro